feat: add add episode and planet put route
